--- a/conf/application.properties
+++ b/conf/application.properties
@@ -4,9 +4,14 @@ server.port=9010
 #The base url to use and must start with / and must not end with /.
 base.url=
 
+#IDAM Configuration [BEGIN]
+
 auth.url=http://localhost:8080/realms/myrealm/protocol/openid-connect/auth
 token.url=http://localhost:8080/realms/myrealm/protocol/openid-connect/token
+
 redirect.url=http://localhost:9010/callback
 
 client.id=codeflowclient
-client.secret=ld86syw4GebJh0f52dWMyDJ2toymtKlJ
+client.secret=<PROVIDE_CLIENT_SECRET>
+
+#IDAM Configuration [END]
