--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id "io.snyk.gradle.plugin.snykplugin" version "0.4"
 }
 
-group 'xyz.ronella.tester'
+group 'xyz.ronella.sample'
 version '1.0.0-SNAPSHOT'
 
 repositories {
